--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "react",
+  "name": "hustle-hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://muiz-uddin.github.io/Hustle-Hub",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "start": "node src/Components/Server.cjs"
- },
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "node src/Components/Server.cjs",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.8",
@@ -40,6 +43,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
