--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hustleub-website",
+  "name": "hustlehub-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node src/Components/Server.cjs",
+    "start": "node server.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
