--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server.js",
+    "start": "node Server.cjs",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
